# github-ntfy

./: AGENTS.md  Cargo.toml  README.md  config.example.toml  install-rust-agent.sh  install.sh
.github/workflows/: rustdoc-pages.yml
src/: action.rs  app.rs  auto_watch.rs  config.rs  filter.rs  github.rs  lib.rs  main.rs  ntfy.rs  render.rs  state.rs
src/github/: auth.rs  client.rs  model.rs  timeline.rs
src/github/graphql/: github-schema.graphql  pull_request_enrichment.graphql
systemd/: github-ntfy-agent.service  github-ntfy.service  github-ntfy.timer
systemd/user/: github-ntfy-agent.service  github-ntfy.service  github-ntfy.timer
